fixed spacing of main page

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -1,5 +1,5 @@
 * { 
-  outline: 1px transparent #947676 !important; 
+  outline: 1px solid #947676 !important; 
   } 
   
    * { 
@@ -96,10 +96,9 @@ body {
 }
 
 .timetable {
-  font-size: 1.3em;
-  margin-left: 6%;
-  margin-top: 20%;
-  height: 200px
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center
 }
 
 .bg-green {
